tests/invalid/bad_mutable.err_exp
bad_mutable.m:009: Error: `:- mutable' declaration in module interface.
bad_mutable.m:017: In declaration for mutable `not_a_type':
bad_mutable.m:017:   error: undefined type `no_type'/0.
bad_mutable.m:019: Error: the inst `special_ground' is not a valid inst for a
bad_mutable.m:019:   `:- mutable' declaration.
bad_mutable.m:019: In declaration for mutable `not_an_inst':
bad_mutable.m:019:   error: undefined inst `special_ground'/0.
bad_mutable.m:021: Error: malformed attribute list in `:- mutable' declaration:
bad_mutable.m:021:   [untrailed, bad_attrib].
bad_mutable.m:023: Error: the type in a `:- mutable' declaration cannot contain
bad_mutable.m:023:   variables: list(T).
bad_mutable.m:025: Error: conflicting attributes in attribute list:
bad_mutable.m:025:   [untrailed, trailed].
bad_mutable.m:027: Error: multiple foreign_name attributes specified for the C
bad_mutable.m:027:   backend.
bad_mutable.m:030: Error: conflicting attributes in attribute list:
bad_mutable.m:030:   [thread_local, trailed].
bad_mutable.m:032: Error: conflicting attributes in attribute list:
bad_mutable.m:032:   [thread_local, constant].
bad_mutable.m:039: Error: the inst `bound(f1(ground, unique))' is not a valid
bad_mutable.m:039:   inst for a `:- mutable' declaration.
